Compilers_Principles/experiment9/LatexParser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> doc
Rule 1     doc -> BEGIN LB DOC RB content END LB DOC RB
Rule 2     content -> title abs sections
Rule 3     content -> title author abs sections
Rule 4     title -> TITLE LB TEXT RB
Rule 5     author -> AUTHOR LB TEXT RB
Rule 6     abs -> BEGIN LB ABS RB TEXT END LB ABS RB
Rule 7     sections -> sections section
Rule 8     sections -> section
Rule 9     section -> SECTION LB TEXT RB TEXT maybe_subsections
Rule 10    section -> SECTION LB TEXT RB TEXT itemize TEXT maybe_subsections
Rule 11    maybe_subsections -> maybe_subsections subsection
Rule 12    maybe_subsections -> subsection
Rule 13    maybe_subsections -> <empty>
Rule 14    subsection -> SUBSECTION LB TEXT RB TEXT
Rule 15    itemize -> BEGIN LB ITEMIZE RB item_list END LB ITEMIZE RB
Rule 16    item_list -> item_list item
Rule 17    item_list -> item
Rule 18    item -> ITEM TEXT

Terminals, with rules where they appear

ABS                  : 6 6
AUTHOR               : 5
BEGIN                : 1 6 15
DOC                  : 1 1
END                  : 1 6 15
ITEM                 : 18
ITEMIZE              : 15 15
LB                   : 1 1 4 5 6 6 9 10 14 15 15
RB                   : 1 1 4 5 6 6 9 10 14 15 15
SECTION              : 9 10
SUBSECTION           : 14
TEXT                 : 4 5 6 9 9 10 10 10 14 14 18
TITLE                : 4
error                : 

Nonterminals, with rules where they appear

abs                  : 2 3
author               : 3
content              : 1
doc                  : 0
item                 : 16 17
item_list            : 15 16
itemize              : 10
maybe_subsections    : 9 10 11
section              : 7 8
sections             : 2 3 7
subsection           : 11 12
title                : 2 3

Parsing method: LALR

state 0

    (0) S' -> . doc
    (1) doc -> . BEGIN LB DOC RB content END LB DOC RB

    BEGIN           shift and go to state 2

    doc                            shift and go to state 1

state 1

    (0) S' -> doc .



state 2

    (1) doc -> BEGIN . LB DOC RB content END LB DOC RB

    LB              shift and go to state 3


state 3

    (1) doc -> BEGIN LB . DOC RB content END LB DOC RB

    DOC             shift and go to state 4


state 4

    (1) doc -> BEGIN LB DOC . RB content END LB DOC RB

    RB              shift and go to state 5


state 5

    (1) doc -> BEGIN LB DOC RB . content END LB DOC RB
    (2) content -> . title abs sections
    (3) content -> . title author abs sections
    (4) title -> . TITLE LB TEXT RB

    TITLE           shift and go to state 8

    content                        shift and go to state 6
    title                          shift and go to state 7

state 6

    (1) doc -> BEGIN LB DOC RB content . END LB DOC RB

    END             shift and go to state 9


state 7

    (2) content -> title . abs sections
    (3) content -> title . author abs sections
    (6) abs -> . BEGIN LB ABS RB TEXT END LB ABS RB
    (5) author -> . AUTHOR LB TEXT RB

    BEGIN           shift and go to state 12
    AUTHOR          shift and go to state 13

    abs                            shift and go to state 10
    author                         shift and go to state 11

state 8

    (4) title -> TITLE . LB TEXT RB

    LB              shift and go to state 14


state 9

    (1) doc -> BEGIN LB DOC RB content END . LB DOC RB

    LB              shift and go to state 15


state 10

    (2) content -> title abs . sections
    (7) sections -> . sections section
    (8) sections -> . section
    (9) section -> . SECTION LB TEXT RB TEXT maybe_subsections
    (10) section -> . SECTION LB TEXT RB TEXT itemize TEXT maybe_subsections

    SECTION         shift and go to state 18

    sections                       shift and go to state 16
    section                        shift and go to state 17

state 11

    (3) content -> title author . abs sections
    (6) abs -> . BEGIN LB ABS RB TEXT END LB ABS RB

    BEGIN           shift and go to state 12

    abs                            shift and go to state 19

state 12

    (6) abs -> BEGIN . LB ABS RB TEXT END LB ABS RB

    LB              shift and go to state 20


state 13

    (5) author -> AUTHOR . LB TEXT RB

    LB              shift and go to state 21


state 14

    (4) title -> TITLE LB . TEXT RB

    TEXT            shift and go to state 22


state 15

    (1) doc -> BEGIN LB DOC RB content END LB . DOC RB

    DOC             shift and go to state 23


state 16

    (2) content -> title abs sections .
    (7) sections -> sections . section
    (9) section -> . SECTION LB TEXT RB TEXT maybe_subsections
    (10) section -> . SECTION LB TEXT RB TEXT itemize TEXT maybe_subsections

    END             reduce using rule 2 (content -> title abs sections .)
    SECTION         shift and go to state 18

    section                        shift and go to state 24

state 17

    (8) sections -> section .

    SECTION         reduce using rule 8 (sections -> section .)
    END             reduce using rule 8 (sections -> section .)


state 18

    (9) section -> SECTION . LB TEXT RB TEXT maybe_subsections
    (10) section -> SECTION . LB TEXT RB TEXT itemize TEXT maybe_subsections

    LB              shift and go to state 25


state 19

    (3) content -> title author abs . sections
    (7) sections -> . sections section
    (8) sections -> . section
    (9) section -> . SECTION LB TEXT RB TEXT maybe_subsections
    (10) section -> . SECTION LB TEXT RB TEXT itemize TEXT maybe_subsections

    SECTION         shift and go to state 18

    sections                       shift and go to state 26
    section                        shift and go to state 17

state 20

    (6) abs -> BEGIN LB . ABS RB TEXT END LB ABS RB

    ABS             shift and go to state 27


state 21

    (5) author -> AUTHOR LB . TEXT RB

    TEXT            shift and go to state 28


state 22

    (4) title -> TITLE LB TEXT . RB

    RB              shift and go to state 29


state 23

    (1) doc -> BEGIN LB DOC RB content END LB DOC . RB

    RB              shift and go to state 30


state 24

    (7) sections -> sections section .

    SECTION         reduce using rule 7 (sections -> sections section .)
    END             reduce using rule 7 (sections -> sections section .)


state 25

    (9) section -> SECTION LB . TEXT RB TEXT maybe_subsections
    (10) section -> SECTION LB . TEXT RB TEXT itemize TEXT maybe_subsections

    TEXT            shift and go to state 31


state 26

    (3) content -> title author abs sections .
    (7) sections -> sections . section
    (9) section -> . SECTION LB TEXT RB TEXT maybe_subsections
    (10) section -> . SECTION LB TEXT RB TEXT itemize TEXT maybe_subsections

    END             reduce using rule 3 (content -> title author abs sections .)
    SECTION         shift and go to state 18

    section                        shift and go to state 24

state 27

    (6) abs -> BEGIN LB ABS . RB TEXT END LB ABS RB

    RB              shift and go to state 32


state 28

    (5) author -> AUTHOR LB TEXT . RB

    RB              shift and go to state 33


state 29

    (4) title -> TITLE LB TEXT RB .

    BEGIN           reduce using rule 4 (title -> TITLE LB TEXT RB .)
    AUTHOR          reduce using rule 4 (title -> TITLE LB TEXT RB .)


state 30

    (1) doc -> BEGIN LB DOC RB content END LB DOC RB .

    $end            reduce using rule 1 (doc -> BEGIN LB DOC RB content END LB DOC RB .)


state 31

    (9) section -> SECTION LB TEXT . RB TEXT maybe_subsections
    (10) section -> SECTION LB TEXT . RB TEXT itemize TEXT maybe_subsections

    RB              shift and go to state 34


state 32

    (6) abs -> BEGIN LB ABS RB . TEXT END LB ABS RB

    TEXT            shift and go to state 35


state 33

    (5) author -> AUTHOR LB TEXT RB .

    BEGIN           reduce using rule 5 (author -> AUTHOR LB TEXT RB .)


state 34

    (9) section -> SECTION LB TEXT RB . TEXT maybe_subsections
    (10) section -> SECTION LB TEXT RB . TEXT itemize TEXT maybe_subsections

    TEXT            shift and go to state 36


state 35

    (6) abs -> BEGIN LB ABS RB TEXT . END LB ABS RB

    END             shift and go to state 37


state 36

    (9) section -> SECTION LB TEXT RB TEXT . maybe_subsections
    (10) section -> SECTION LB TEXT RB TEXT . itemize TEXT maybe_subsections
    (11) maybe_subsections -> . maybe_subsections subsection
    (12) maybe_subsections -> . subsection
    (13) maybe_subsections -> .
    (15) itemize -> . BEGIN LB ITEMIZE RB item_list END LB ITEMIZE RB
    (14) subsection -> . SUBSECTION LB TEXT RB TEXT

  ! shift/reduce conflict for SUBSECTION resolved as shift
    SECTION         reduce using rule 13 (maybe_subsections -> .)
    END             reduce using rule 13 (maybe_subsections -> .)
    BEGIN           shift and go to state 41
    SUBSECTION      shift and go to state 42

  ! SUBSECTION      [ reduce using rule 13 (maybe_subsections -> .) ]

    maybe_subsections              shift and go to state 38
    itemize                        shift and go to state 39
    subsection                     shift and go to state 40

state 37

    (6) abs -> BEGIN LB ABS RB TEXT END . LB ABS RB

    LB              shift and go to state 43


state 38

    (9) section -> SECTION LB TEXT RB TEXT maybe_subsections .
    (11) maybe_subsections -> maybe_subsections . subsection
    (14) subsection -> . SUBSECTION LB TEXT RB TEXT

    SECTION         reduce using rule 9 (section -> SECTION LB TEXT RB TEXT maybe_subsections .)
    END             reduce using rule 9 (section -> SECTION LB TEXT RB TEXT maybe_subsections .)
    SUBSECTION      shift and go to state 42

    subsection                     shift and go to state 44

state 39

    (10) section -> SECTION LB TEXT RB TEXT itemize . TEXT maybe_subsections

    TEXT            shift and go to state 45


state 40

    (12) maybe_subsections -> subsection .

    SUBSECTION      reduce using rule 12 (maybe_subsections -> subsection .)
    SECTION         reduce using rule 12 (maybe_subsections -> subsection .)
    END             reduce using rule 12 (maybe_subsections -> subsection .)


state 41

    (15) itemize -> BEGIN . LB ITEMIZE RB item_list END LB ITEMIZE RB

    LB              shift and go to state 46


state 42

    (14) subsection -> SUBSECTION . LB TEXT RB TEXT

    LB              shift and go to state 47


state 43

    (6) abs -> BEGIN LB ABS RB TEXT END LB . ABS RB

    ABS             shift and go to state 48


state 44

    (11) maybe_subsections -> maybe_subsections subsection .

    SUBSECTION      reduce using rule 11 (maybe_subsections -> maybe_subsections subsection .)
    SECTION         reduce using rule 11 (maybe_subsections -> maybe_subsections subsection .)
    END             reduce using rule 11 (maybe_subsections -> maybe_subsections subsection .)


state 45

    (10) section -> SECTION LB TEXT RB TEXT itemize TEXT . maybe_subsections
    (11) maybe_subsections -> . maybe_subsections subsection
    (12) maybe_subsections -> . subsection
    (13) maybe_subsections -> .
    (14) subsection -> . SUBSECTION LB TEXT RB TEXT

  ! shift/reduce conflict for SUBSECTION resolved as shift
    SECTION         reduce using rule 13 (maybe_subsections -> .)
    END             reduce using rule 13 (maybe_subsections -> .)
    SUBSECTION      shift and go to state 42

  ! SUBSECTION      [ reduce using rule 13 (maybe_subsections -> .) ]

    maybe_subsections              shift and go to state 49
    subsection                     shift and go to state 40

state 46

    (15) itemize -> BEGIN LB . ITEMIZE RB item_list END LB ITEMIZE RB

    ITEMIZE         shift and go to state 50


state 47

    (14) subsection -> SUBSECTION LB . TEXT RB TEXT

    TEXT            shift and go to state 51


state 48

    (6) abs -> BEGIN LB ABS RB TEXT END LB ABS . RB

    RB              shift and go to state 52


state 49

    (10) section -> SECTION LB TEXT RB TEXT itemize TEXT maybe_subsections .
    (11) maybe_subsections -> maybe_subsections . subsection
    (14) subsection -> . SUBSECTION LB TEXT RB TEXT

    SECTION         reduce using rule 10 (section -> SECTION LB TEXT RB TEXT itemize TEXT maybe_subsections .)
    END             reduce using rule 10 (section -> SECTION LB TEXT RB TEXT itemize TEXT maybe_subsections .)
    SUBSECTION      shift and go to state 42

    subsection                     shift and go to state 44

state 50

    (15) itemize -> BEGIN LB ITEMIZE . RB item_list END LB ITEMIZE RB

    RB              shift and go to state 53


state 51

    (14) subsection -> SUBSECTION LB TEXT . RB TEXT

    RB              shift and go to state 54


state 52

    (6) abs -> BEGIN LB ABS RB TEXT END LB ABS RB .

    SECTION         reduce using rule 6 (abs -> BEGIN LB ABS RB TEXT END LB ABS RB .)


state 53

    (15) itemize -> BEGIN LB ITEMIZE RB . item_list END LB ITEMIZE RB
    (16) item_list -> . item_list item
    (17) item_list -> . item
    (18) item -> . ITEM TEXT

    ITEM            shift and go to state 57

    item_list                      shift and go to state 55
    item                           shift and go to state 56

state 54

    (14) subsection -> SUBSECTION LB TEXT RB . TEXT

    TEXT            shift and go to state 58


state 55

    (15) itemize -> BEGIN LB ITEMIZE RB item_list . END LB ITEMIZE RB
    (16) item_list -> item_list . item
    (18) item -> . ITEM TEXT

    END             shift and go to state 59
    ITEM            shift and go to state 57

    item                           shift and go to state 60

state 56

    (17) item_list -> item .

    END             reduce using rule 17 (item_list -> item .)
    ITEM            reduce using rule 17 (item_list -> item .)


state 57

    (18) item -> ITEM . TEXT

    TEXT            shift and go to state 61


state 58

    (14) subsection -> SUBSECTION LB TEXT RB TEXT .

    SUBSECTION      reduce using rule 14 (subsection -> SUBSECTION LB TEXT RB TEXT .)
    SECTION         reduce using rule 14 (subsection -> SUBSECTION LB TEXT RB TEXT .)
    END             reduce using rule 14 (subsection -> SUBSECTION LB TEXT RB TEXT .)


state 59

    (15) itemize -> BEGIN LB ITEMIZE RB item_list END . LB ITEMIZE RB

    LB              shift and go to state 62


state 60

    (16) item_list -> item_list item .

    END             reduce using rule 16 (item_list -> item_list item .)
    ITEM            reduce using rule 16 (item_list -> item_list item .)


state 61

    (18) item -> ITEM TEXT .

    END             reduce using rule 18 (item -> ITEM TEXT .)
    ITEM            reduce using rule 18 (item -> ITEM TEXT .)


state 62

    (15) itemize -> BEGIN LB ITEMIZE RB item_list END LB . ITEMIZE RB

    ITEMIZE         shift and go to state 63


state 63

    (15) itemize -> BEGIN LB ITEMIZE RB item_list END LB ITEMIZE . RB

    RB              shift and go to state 64


state 64

    (15) itemize -> BEGIN LB ITEMIZE RB item_list END LB ITEMIZE RB .

    TEXT            reduce using rule 15 (itemize -> BEGIN LB ITEMIZE RB item_list END LB ITEMIZE RB .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for SUBSECTION in state 36 resolved as shift
WARNING: shift/reduce conflict for SUBSECTION in state 45 resolved as shift
